--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
+
+
+
     <RelativeLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -29,6 +32,8 @@
 
         </android.support.design.widget.TextInputLayout>
 
+
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewSearchResults"
             android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -36,6 +41,20 @@
             android:layout_height="match_parent"
             android:layout_below="@id/textInputLayoutSearch"/>
 
+        <TextView
+            android:id="@+id/tvEmptyList"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            android:text="@string/list_is_empty" />
+
     </RelativeLayout>
+
+
+
+
 
 </LinearLayout>
